--- a/Repository/RepositoryInterface/RepositoryInterface.csproj
+++ b/Repository/RepositoryInterface/RepositoryInterface.csproj
@@ -5,11 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="4.5.0" />
     <PackageReference Include="Insight.Database" Version="6.2.8" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Domain\Domain.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\CrossCutting\CrossCutting.csproj" />
   </ItemGroup>
 
 </Project>
