--- a/Infrastructure/CrossCutting/CrossCutting.csproj
+++ b/Infrastructure/CrossCutting/CrossCutting.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="4.5.0" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
+    <PackageReference Include="NLog" Version="4.6.0" />
+  </ItemGroup>
+
 </Project>
