--- a/Presentation/WebApp/nlog.config
+++ b/Presentation/WebApp/nlog.config
@@ -10,21 +10,11 @@
 
       internalLogFile="${basedir}\logs\internal-nlog.txt">
 
-
-
   <!--https://github.com/damienbod/AspNetCoreNlog-->
 
-
-
-  <!-- enable asp.net core layout renderers -->
-
   <extensions>
-
     <add assembly="NLog.Web.AspNetCore"/>
-
   </extensions>
-
-
 
   <!-- the targets to write to -->
 
@@ -57,13 +47,14 @@
 
             insert into dbo.LogAspNetCore (
 
-            Application, Logged, Level, URL,UserName, Message,
+            Application,TraceIdentifier, Logged, Level, RequestIPAddress, URL,UserName, Message,
 
             Logger, CallSite, Exception
 
             ) values (
 
-            @Application, @Logged, @Level,@url,@UserName ,@Message,
+            @Application,@TraceIdentifier, @Logged, @Level, @RequestIPAddress ,
+                @url,@UserName ,@Message,
 
             @Logger, @Callsite, @Exception
 
@@ -80,11 +71,13 @@
           <parameter name="@level" layout="${level}" />
 
           <parameter name="@message" layout="${message} " />
-
-          <parameter name="@url" layout="${aspnet-request-url} ${aspnet-user-isauthenticated} ${aspnet-item} "  />
+          <parameter name="@RequestIPAddress" layout="${aspnet-request-ip}" />
+         
+          <parameter name="@url" layout="${aspnet-request-url}  ${aspnet-item} "  />
 
           <parameter name="@UserName" layout="${aspnet-user-identity}"/>
-
+          <parameter name="@TraceIdentifier" layout="${aspnet-TraceIdentifier}"/>
+          
           <parameter name="@logger" layout="${logger}" />
 
           <parameter name="@callSite" layout="${callsite:filename=true}" />
