Delete Edit User

--- a/Presentation/WebApp/WebApp.csproj
+++ b/Presentation/WebApp/WebApp.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\lib\MvcGrid\mvc-grid.js" />
     <None Include="wwwroot\lib\sweetalert2\.github\CODE_OF_CONDUCT.md" />
     <None Include="wwwroot\lib\sweetalert2\.github\ISSUE_TEMPLATE\01_bug_report.md" />
     <None Include="wwwroot\lib\sweetalert2\.github\ISSUE_TEMPLATE\02_feature_request.md" />
@@ -32,6 +33,7 @@
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="1.0.172" />
     <PackageReference Include="NLog" Version="4.6.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.8.1" />
+    <PackageReference Include="NonFactors.Grid.Mvc6" Version="4.1.0" />
   </ItemGroup>
 
 
